--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,11 @@
 #Tomcat server port number = 8080, context-path = /
 server:
   port: 8081
-  servlet:
-    context-path: /api/v1
 
 #DB properties
 spring:
+  application:
+    name: USER-SERVICE
   datasource:
     url: jdbc:mysql://localhost:3306/amazoneclone?useSSL=false&allowPublicKeyRetrieval=true
     username: root
@@ -22,3 +22,19 @@ spring:
         format_sql: false
     database: MYSQL
     database-platform: org.hibernate.dialect.MySQL8Dialect
+
+# Eureka Client Configuration
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
+#logging.level.org.springframework.orm.hibernate5=DEBUG
+logging:
+  file:
+    name: "logs/app.log"
+    path: "."
+  pattern:
+    level: "[%-5level] %logger{36}.%M.[%line]"
+    dateformat: "yyyy-MM-dd HH:mm:ss"
+    correlation: "[%X{reqId}] - "
